# my_arcade

./: .gitignore  CMakeLists.txt  README.md
include/: Libs.hpp
include/Core/: CoreModule.hpp  ICoreModule.hpp  LdlWrapper.hpp
include/Entities/: IEntities.hpp
include/Games/: AGameModule.hpp  IGameModule.hpp
include/Games/Menu/: Menu.hpp
include/Games/Snake/: SnakeGameModule.hpp
include/Graphics/: AGraphicalModule.hpp  IGraphicalModule.hpp
include/Graphics/Ncurses/: NcursesGraphicalModule.hpp  NcursesWrapper.hpp
include/Graphics/SDL2/: SDL2Wrapper.hpp  Sdl2GraphicalModule.hpp
include/Graphics/SFML/: SfmlGraphicalModule.hpp
src/: main.cpp
src/core/: Core.cpp  Ldlwrapper.cpp
src/entities/: AEntities.cpp
src/games/: AGameModule.cpp
src/games/menu/: Menu.cpp
src/games/snake/: SnakeGameModule.cpp
src/globClasses/: Ascii.cpp  Errors.cpp  Tiles.cpp
src/graphicals/: AGraphicalModule.cpp
src/graphicals/SFML/: SfmlGraphicalModule.cpp
src/graphicals/ncurses/: ncurse.cpp
src/graphicals/sdl2/: Sdl2GraphicalModule.cpp  Sdl2Wrapper.cpp
